--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,34 @@
-.ms-cols {
-    /* debug */
-    background-color: aqua;
+/* RESET */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.box {
+    width: 95px;
+    height: 95px;
+    margin: 2px;
+    line-height: 95px;
+    text-align: center;
+    background-color: blueviolet;
+}
+
+.green {
+    background-color: green;
+}
+
+.yellow {
+    background-color: yellow;
+}
+
+.blue {
+    background-color: blue;
 }
